@@ -3,6 +3,14 @@ This file only list changes to game code.  Changes to content can be found here:
 http://onehouronelife.com/updateLog.php
 
 
+Version 341    ???
+
+--Player character now flips facing direction as mouse moves to left and right.
+  Fixes #623
+
+
+
+
 Version 340    2020-May-22
 
 --New speech length limit curve that rises rapidly between ages 8 and 16, so
